Fixed naming and whitespace mistakes

--- a/src/main/webapp/WEB-INF/views/css/header.css
+++ b/src/main/webapp/WEB-INF/views/css/header.css
@@ -1,11 +1,11 @@
-.appLogout {
+.app-logout {
     height: 20px;
     width: 98%;
     padding: 5px 15px 5px 15px;
     display: flex;
     justify-content: space-between;
 }
-.appLogout a {
+.app-logout a {
     font: bold 11px Arial;
     text-decoration: none;
     background-color: #EEEEEE;
